--- a/README.adoc
+++ b/README.adoc
@@ -111,20 +111,20 @@ Stop all running processes in the sandbox and unmount the copy on write filesyst
 `config [NAME]`::
   Read and display the configuration. Use in conjunction with `-v` to debug where configuration values are set.
 
-`list [PATTERN]`::
+`list [PATTERNS]`::
 List running sandboxes matching these patterns (defaults to all)
 
-`status [PATTERN]`::
+`status [PATTERNS]`::
 Show status of the sandbox matching the patterns in the current directory, or specified
 patterns. Use `status /` to show status of all files in the sandbox.
 
 `diff`::
 Show changes in the sandbox relative to the current changes
 
-`reject [PATTERN]`::
+`reject [PATTERNS]`::
 Reject changes in the sandbox. This works relative to your current working directory only, and changes outside of your working directory are ignored.
 
-`accept [PATTERN]`::
+`accept [PATTERNS]`::
 Accept changes in the sandbox. This works relative to your current working directory only, and changes outside of your working directory are ignored.
 
 `sync`::
@@ -132,6 +132,9 @@ Synchronize changes that might have occurred in your host file system so that th
 
 `stop [--all]`::
 Kill all processes in the sandbox and unmount the filesystems. Note this will not reject any changes
+
+`delete [PATTERNS]`::
+Stop and delete all files associated with the sandboxes matching the provided patterns. If no patterns are provided, deletes the default or --name'd sandbox.
 
 `help`::
 Print this message or the help of the given subcommand(s)
